@@ -127,18 +127,6 @@
 <plugins>
 
     <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.22.0</version>
-        <configuration>
-            <argLine>
-                --illegal-access=permit
-            </argLine>
-        </configuration>
-    </plugin>
-
-
-    <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
         <version>${jacoco.version}</version>
